--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "src/zed-ros-wrapper"]
 	path = src/zed-ros-wrapper
 	url = https://github.com/stereolabs/zed-ros-wrapper.git
+[submodule "src/yolo_depth_fusion"]
+	path = src/yolo_depth_fusion
+	url = https://github.com/green4free/yolo_depth_fusion.git
